--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,13 @@
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
-.idea
-traouve.mwb
-traouve.mwb.bak
+.idea/
+*.bak
+/public/uploads
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+/assets
