--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,6 +11,10 @@ security:
             security: false
         main:
             anonymous: true
+            guard:
+                authenticators:
+                - App\Security\LoginFormAuthenticator
+
 
             # activate different ways to authenticate
 
