--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
         "node-sass": "^4.10.0",
         "sass-loader": "^7.1.0",
         "font-awesome": "^4.7.0",
-        "style-loader": "^0.23.1"
+        "style-loader": "^0.23.1",
+        "bootstrap": "^4.1.3",
+        "jquery": "^3.3.1",
+        "popper.js": "^1.14.5",
+        "webpack": "^4.26.0",
+        "webpack-cli": "^3.1.2"
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
