--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -4,7 +4,10 @@ security:
             algorithm: bcrypt
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: email
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -14,7 +17,8 @@ security:
             guard:
                 authenticators:
                 - App\Security\LoginFormAuthenticator
-
+            logout:
+                path: app_logout
 
             # activate different ways to authenticate
 
