--- a/config/services.yaml
+++ b/config/services.yaml
@@ -6,6 +6,7 @@
 parameters:
     locale: 'fr'
     app.path.uploads_dir: uploads
+    photo_directory: '%kernel.project_dir%/public/uploads'
 
 services:
     # default configuration for services in *this* file
