--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
     "devDependencies": {
         "@symfony/webpack-encore": "^0.22.0",
+        "bootstrap": "^4.1.3",
         "bootswatch": "^4.1.3",
-        "webpack-notifier": "^1.6.0",
         "copy-webpack-plugin": "^4.6.0",
         "css-loader": "^1.0.1",
         "file-loader": "^2.0.0",
-        "node-sass": "^4.10.0",
-        "sass-loader": "^7.1.0",
         "font-awesome": "^4.7.0",
-        "style-loader": "^0.23.1",
-        "bootstrap": "^4.1.3",
         "jquery": "^3.3.1",
+        "node-sass": "^4.10.0",
         "popper.js": "^1.14.5",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.1",
         "webpack": "^4.26.0",
-        "webpack-cli": "^3.1.2"
+        "webpack-cli": "^3.1.2",
+        "webpack-notifier": "^1.6.0"
     },
     "dependencies": {
         "bootstrap": "^4.1.3",
