--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,8 @@
 #    controller: App\Controller\DefaultController::index
 app_logout:
   path: /logout
+easy_admin_bundle:
+  # this is just an example; update the value of 'resource' accordingly
+  resource: 'App\Controller\AdminController'
+  type:     annotation
+  prefix:   /admin
