--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.22.0",
         "bootstrap": "^4.1.3",
+        "bootstrap-colorpicker": "^3.0.3",
         "bootswatch": "^4.1.3",
         "copy-webpack-plugin": "^4.6.0",
         "css-loader": "^1.0.1",
